# Despoina

./: .gitignore  Cargo.toml  README.md  conf.yml.example  results.csv.example
src/: cli.rs  main.rs
templates/: email_body.html
