[package]
name = "Despoina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
tera = "1"
serde = { version = "1", features = ["derive"] }
csv = "1.1"
serde_yaml = "0.9"
